allprojects {
    apply plugin: 'java'

    group = 'io.github.wynn5a'
    version = '1.0'

    repositories {
        mavenCentral()
    }

    sourceCompatibility = "17"
    targetCompatibility = "17"
}

tasks.withType(JavaCompile).configureEach {
    javaCompiler = javaToolchains.compilerFor {
        languageVersion = JavaLanguageVersion.of(17)
    }
}